--- a/Mercado (HTML)/css/style.css
+++ b/Mercado (HTML)/css/style.css
@@ -1,10 +1,7 @@
 #header {
     display: flex;
-    flex-direction: row;
-}
-
-#cashEcarrinho {
-    padding: 0px 0px 0px 1000px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #body_Index {
@@ -275,3 +272,18 @@
     font-size: 15px;
     color: springgreen;
 }
+
+.img_Carrinho {
+    width: 50px;
+    height: 50px;
+}
+
+.modal .modal-dialog {
+    max-width: 800px;
+}
+
+#lista_Carrinho td, th{
+    vertical-align: middle;
+    text-align: center;
+}
+
