--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,21 @@
     background-size: cover;
 }
 
+#body_Acougue {
+    background-image: url("https://images.unsplash.com/photo-1580717579426-658096215b5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=965&q=80");
+    background-size: cover;
+}
+
+#body_Bebidas {
+    background-image: url("https://images.unsplash.com/photo-1513093496871-0a81425386e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80");
+    background-size: cover;
+}
+
+#body_Padaria {
+    background-image: url("https://images.unsplash.com/photo-1587241321921-91a834d6d191?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+    background-size: cover;
+}
+
 #nav {
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -49,7 +64,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 25px;
     display: flex;
-    padding: 15px 15px 15px 15px;
+    padding: 15px;
     float: right;
 }
 
@@ -122,12 +137,7 @@
 }
 
 #carrinho {
-    display: flex;
-    /* margin-left: 7%; */
-    padding: 10px 10px 10px 10px;
-    /* align-items: flex-end;
-    float: right;
-    width: auto; */
+    padding: 10px;
 }
 
 #carrinho img {
@@ -285,5 +295,23 @@
 #lista_Carrinho td, th{
     vertical-align: middle;
     text-align: center;
+}
+
+.botao_Remove button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.botao_Remove img {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
